--- a/namespaces/simple-app/app.yaml
+++ b/namespaces/simple-app/app.yaml
@@ -14,8 +14,8 @@ spec:
         run: neg-demo-app # Labels Pods from this Deployment
     spec: # Pod specification; each Pod created by this Deployment has this specification
       containers:
-      - image: k8s.gcr.io/serve_hostname:v1.4 # Application to run in Deployment's Pods
+      - image: gcr.io/liadush-258608/php-v1 # Application to run in Deployment's Pods
         name: hostname # Container name
         ports:
-        - containerPort: 9376
+        - containerPort: 8080
           protocol: TCP
