--- a/namespaces/simple-app/app.yaml
+++ b/namespaces/simple-app/app.yaml
@@ -1,21 +1,21 @@
-piVersion: apps/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   labels:
-    run: neg-demo-app # Label for the Deployment
-  name: neg-demo-app # Name of Deployment
+    run: native-lb # Label for the Deployment
+  name: native-lb # Name of Deployment
 spec:
   selector:
     matchLabels:
-      run: neg-demo-app
+      run: native-lb
   template: # Pod template
     metadata:
       labels:
-        run: neg-demo-app # Labels Pods from this Deployment
+        run: native-lb # Labels Pods from this Deployment
     spec: # Pod specification; each Pod created by this Deployment has this specification
       containers:
       - image: gcr.io/liadush-258608/php-v1 # Application to run in Deployment's Pods
-        name: hostname # Container name
+        name: liadush # Container name
         ports:
         - containerPort: 8080
           protocol: TCP
