--- a/namespaces/simple-app/ingress.yaml
+++ b/namespaces/simple-app/ingress.yaml
@@ -1,8 +1,8 @@
 apiVersion: networking.k8s.io/v1beta1
 kind: Ingress
 metadata:
-  name: neg-demo-ing
+  name: native-lb-ing
 spec:
   backend:
-    serviceName: neg-demo-svc # Name of the Service targeted by the Ingress
+    serviceName: native-lb-svc # Name of the Service targeted by the Ingress
     servicePort: 80 # Should match the port used by the Service
