--- a/namespaces/simple-app/app.yaml
+++ b/namespaces/simple-app/app.yaml
@@ -15,8 +15,8 @@ spec:
         run: native-lb # Labels Pods from this Deployment
     spec: # Pod specification; each Pod created by this Deployment has this specification
       containers:
-      - image: gcr.io/liadush-258608/community # Application to run in Deployment's Pods
+      - image: k8s.gcr.io/serve_hostname:v1.4 # Application to run in Deployment's Pods
         name: liadush # Container name
         ports:
-        - containerPort: 8080
+        - containerPort: 9376
           protocol: TCP
