--- a/cluster/ClusterRole.yaml
+++ b/cluster/ClusterRole.yaml
@@ -1,8 +1,10 @@
-kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
 metadata:
-  name: fake-user
+  name: <role name>
 rules:
-- apiGroups: [""]
-  resources: ["pods"]
-  verbs: use
+- apiGroups: ['policy']
+  resources: ['podsecuritypolicies']
+  verbs:     ['use']
+  resourceNames:
+  - example
