--- a/cluster/ClusterRole.yaml
+++ b/cluster/ClusterRole.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: <role name>
+  name: role:fake-user
 rules:
 - apiGroups: ['policy']
   resources: ['podsecuritypolicies']
