--- a/cluster/ClusterRoleBinding.yaml
+++ b/cluster/ClusterRoleBinding.yaml
@@ -1,12 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: example
+  name: clusterrole:fake-user
 roleRef:
   kind: ClusterRole
-  name: <role name>
+  name: role:fake-user
   apiGroup: rbac.authorization.k8s.io
 subjects:
 # Authorize specific service accounts:
 - kind: ServiceAccount
-  name: <authorized service account name>
+  name: fake-user
