--- a/cluster/ClusterRoleBinding.yaml
+++ b/cluster/ClusterRoleBinding.yaml
@@ -1,10 +1,10 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: clusterrole:fake-user
+  name: clusterrole-fake-user
 roleRef:
   kind: ClusterRole
-  name: role:fake-user
+  name: role-fake-user
   apiGroup: rbac.authorization.k8s.io
 subjects:
 # Authorize specific service accounts:
