--- a/cluster/pd_no_priv.yaml
+++ b/cluster/pd_no_priv.yaml
@@ -1,9 +1,21 @@
-apiVersion: constraints.gatekeeper.sh/v1beta1
-kind: K8sPSPPrivilegedContainer
+apiversion: constraint.gatekeeper.sh/v1beta1
+kind: k8spspallowedusers
 metadata:
-  name: psp-privileged-container
+  name : allowed-users
 spec:
   match:
     kinds:
       - apiGroups: [""]
         kinds: ["Pod"]
+    excludedNamespaces:
+      - istio-system
+      - kube-system
+      - gatekeeper-system
+      - config-management-system
+  parameters:
+    RunAsUser:
+      rule: MustRunAs
+      ranges:
+        - min : 100
+          max: 20000
+        
